make transparent scrollbars and add a stopping status while waiting for connections to close

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -7,3 +7,12 @@ body {
   background-color: #cde4f5 !important;
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 14px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
